# libESRI

./: .gitignore  CMakeLists.txt  README.md  libESRI.sln  libESRI.vcxproj  libESRI.vcxproj.filters  makefile
Bin_x64Debug/: libESRI.exp  libESRI.lib
Bin_x64Release/: libESRI.exp  libESRI.iobj  libESRI.ipdb  libESRI.lib
Int_x64Debug/libESRI/: vc140.idb
Int_x64Debug/libESRI/libESRI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libESRI.lastbuildstate  libESRI.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Int_x64Release/libESRI/libESRI.tlog/: libESRI.lastbuildstate  libESRI.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bindings/: esri.hpp
include/: EsriExport.h  IEsriHandler.h  IEsriHandlerFactory.h  IEsriInstance.h  IEsriTerminal.h  libESRI.h
sample/: SampleApp.cpp
src/: EsriClientThread.cpp  EsriClientThread.h  EsriHandler.cpp  EsriHandler.h  EsriHandlerFactory.cpp  EsriHandlerFactory.h  EsriInstance.cpp  EsriInstance.h  EsriInternalCommands.cpp  EsriInternalCommands.h  EsriTerminal.cpp  EsriTerminal.h  OsTools.h  OsTools_Linux.cpp  OsTools_Windows.cpp  Platform.h  SetThreadName.cpp  SetThreadName.h  SocketEndpoint.cpp  SocketEndpoint.h  SocketEndpointConverter.cpp  SocketEndpointConverter.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TelnetConnection.cpp  TelnetConnection.h  libESRI.cpp  networkCommon.h  stdafx.h  strOps.h
